--- a/index.html/dowodnowy.html
+++ b/index.html/dowodnowy.html
@@ -128,7 +128,7 @@
 <p class="krecha"></p>
 <section class="dana">
 <p class="info">Nazwiskо rodowе</p>
-<p class="main">BYK</p>
+<p class="main">CWEL</p>
 </section>
 <p class="krecha"></p>
 <section class="dana">
